<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".IntroductionActivity">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="2.5" />

    <TextView
        android:id="@+id/textViewGetStarted1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/click_on"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageViewTick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:contentDescription="@string/add_icon" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/to_create_a_new_task"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="normal" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1.5" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:padding="4dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/dark_pink_700"
        android:text="@string/continueButton"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_gravity="right"/>


</LinearLayout>